src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

section {
  @apply flex flex-col lg:flex-row w-full;
}

nav {
  @apply w-full absolute top-2   md:top-5 lg:px-20  flex flex-col md:flex-row items-center gap-10 text-white font-semibold;
}

.logoGrp {
  @apply w-full md:w-auto flex flex-row-reverse justify-between items-center  pb-3 md:pb-3 p-5 md:p-0;
}

.menu {
  @apply md:hidden;
}

.navListContainer {
  @apply absolute top-0 md:top-auto left-0 md:left-auto md:relative w-full md:w-auto flex flex-row items-center justify-between  gap-5 text-black md:text-white px-5 md:px-0 py-10 md:py-0   bg-white md:bg-transparent   -translate-y-2 md:-translate-y-0 transition ease-in-out duration-300;
}

.navList {
  @apply md:w-auto flex flex-row items-center  md:justify-center   gap-5;
}

.hideNavList {
  @apply -translate-y-96 md:-translate-y-0 z-10 md:z-auto;
}

.navText {
  @apply lg:pb-3 lg:border-b-2 lg:border-b-transparent lg:hover:border-b-white transition ease-in-out duration-300 cursor-pointer text-sm md:text-base;
}

.homeBox {
  @apply bg-auto  bg-no-repeat w-full h-auto md:w-6/10;
}

.text {
  @apply text-sm text-gray-400 font-semibold;
}

.topTextContainer {
  @apply bg-white w-full md:w-4/10 flex flex-col justify-between;
}

.topTextBox {
  @apply px-5 lg:px-16 pb-5 pt-20;
}

.ctrlBtnGrp {
  @apply w-auto flex flex-row items-center;
}

.ctrlBtn {
  @apply p-5 bg-black hover:bg-gray-700 transition ease-in-out duration-300;
}

.bottomImgBox {
  @apply w-full lg:w-3/10;
}

.bottomTextBox {
  @apply w-full lg:w-4/10  px-5 lg:px-10 py-5;
}

